--- a/widgets.html
+++ b/widgets.html
@@ -209,7 +209,7 @@
                     <!--Image Avatar-->
                     <div class="avatar text-center">
                         <img src="assets/img/client-img4.png" alt="" class="rounded-circle" />
-                        <p><strong>Jonathan Clarke</strong></p>
+                        <p><strong>Yeison Leon</strong></p>
                         <span class="text-primary small"><strong>UI/UX Designer</strong></span>
                     </div>
                     <!--Image Avatar-->
